--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
     "react": "^18.3.1",
+    "react-client-session": "^0.0.8",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
