--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,23 @@
 version: '3.8'
 services:
-  web:
+  app:
+    container_name: node-app
     build: .
     ports:
       - "3000:3000"
     volumes:
       - .:/app
       - /app/node_modules
+    depends_on:
+      - mongo
     environment:
-      NODE_ENV: development
-    command: npm start
+      MONGO_URI: mongodb://mongo:27017/mydatabase
+  mongo:
+    container_name: mongo-db
+    image: mongo:latest
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+volumes:
+  mongo-data:
